--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <html manifest="cacheManifest.mf">
   <head>
-    <title> Welcome to Cathulhu </title>
+    <title>Cathulhu</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   </head>
-  <body>  
-      <pre id="versionNumber">Version 1.2.1, </pre>
+  <body>
+      <pre id="welcome" align="center">WELCOME</pre>
   </body>
 </html>
