--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   </head>
   <body>
-      <pre id="welcome" align="center">WELCOME</pre>
+      <h1 id="welcome" align="center">WELCOME</h1>
   </body>
 </html>
