--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<!-- Hey, you're looking at the source code, cheater! ;) -->
+<!-- Эй! Ты зачем сюда пришел? Кыш-кыш отсюда ;) -->
 
 <html manifest="cacheManifest.mf">
   <head>
@@ -8,6 +8,6 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   </head>
   <body>
-      <h1 id="welcome" align="center">WELCOME</h1>
+      <pre id="welcome" align="center">WELCOME</pre>
   </body>
 </html>
