--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <!-- Эй! Ты зачем сюда пришел? Кыш-кыш отсюда ;) -->
 
-<html manifest="cacheManifest.mf">
+<html>
   <head>
     <title>Cathulhu</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <pre id="welcome" align="center">WELCOME</pre>
