--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <pre id="welcome" align="center">WELCOME</pre>
+      <h1 id="welcome" align="center">Добро пожаловать!</h1>
+      <pre id="welcome" align="center">Вы можете связаться со мной тут:</pre>
+    
   </body>
 </html>
