--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Cathulhu</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="style.css">
+    <style>
+   body {
+    background-color: #e2e2e2;
+  }
+    </style>
   </head>
   <body>
       <h1 id="welcome" align="center">Добро пожаловать!</h1>
       <pre id="welcome" align="center">Вы можете связаться со мной тут:</pre>
-    
+
   </body>
 </html>
