--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </style>
   </head>
   <body>
-      <h1 id="welcome" align="center">Добро пожаловать!</h1>
-      <pre id="welcome" align="center">Вы можете связаться со мной тут:</pre>
+      <h1 id="welcome" align="center">ДОБРО ПОЖАЛОВАТЬ</h1>
+      <pre id="welcome" align="center">СВЯЗАТЬСЯ СО МНОЙ ВЫ МОЖЕТЕ ТУТ:</pre>
 
   </body>
 </html>
