--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 
 <!-- Эй! Ты зачем сюда пришел? Кыш-кыш отсюда ;) -->
 
@@ -16,6 +16,6 @@
   <body>
       <h1 id="welcome" align="center">ДОБРО ПОЖАЛОВАТЬ</h1>
       <pre id="welcome" align="center">СВЯЗАТЬСЯ СО МНОЙ ВЫ МОЖЕТЕ ТУТ:</pre>
-
+	<p id="welcome" align="center">ДРЮЛЯ ПИЗДЮК</p>
   </body>
 </html>
