--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
       <h1 id="welcome" align="center">ДОБРО ПОЖАЛОВАТЬ</h1>
-      <pre id="welcome" align="center">СВЯЗАТЬСЯ СО МНОЙ ВЫ МОЖЕТЕ ТУТ:</pre>
+      <pre id="welcome" align="center">А ВЫ ЗНАЛИ? ЧТО</pre>
 	<p id="welcome" align="center">ДРЮЛЯ ПИЗДЮК</p>
   </body>
 </html>
