--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       <h1 id="welcome" align="center">ДОБРО ПОЖАЛОВАТЬ</h1>
       <pre id="welcome" align="center">А ВЫ ЗНАЛИ? ЧТО</pre>
 	<p id="welcome" align="center">ДРЮЛЯ ПИЗДЮК</p>
+  <img src="1.jpg" alt="Дрюля пидр"
   </body>
 </html>
