--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
    body {
-    background-color: #e2e2e2;
+    background-image:url('1.jpg')
   }
     </style>
   </head>
@@ -17,6 +17,5 @@
       <h1 id="welcome" align="center">ДОБРО ПОЖАЛОВАТЬ</h1>
       <pre id="welcome" align="center">А ВЫ ЗНАЛИ? ЧТО</pre>
 	<p id="welcome" align="center">ДРЮЛЯ ПИЗДЮК</p>
-  <img src="1.jpg" alt="Дрюль" style="width:700px;height:350px;" align="center">
   </body>
 </html>
