--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 ﻿<!DOCTYPE HTML>
 
-<!-- Эй! Ты зачем сюда пришел? Кыш-кыш отсюда ;) -->
-
 <html>
   <head>
     <title>Cathulhu</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="style.css">
-    <style>
-   body {
-    background-image:url('1.jpg')
-  }
-    </style>
   </head>
   <body>
-      <h1 id="welcome" align="center">ДОБРО ПОЖАЛОВАТЬ</h1>
-	<p id="welcome" align="center">ДРЮЛЯ ПИЗДЮК</p>
+    HELLO WORLD
   </body>
 </html>
