--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+<?php
+$a="HELL";
+echo $a;
+?>
     HELLO WORLD
   </body>
 </html>
