--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<?php
-$a="HELL";
-echo $a;
-?>
+    <script language="php">
+            echo ("некоторые редакторы (например, FrontPage) не любят инструкции обработки");
+        </script>
+
     HELLO WORLD
   </body>
 </html>
