--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <script language="php">
-            echo ("некоторые редакторы (например, FrontPage) не любят инструкции обработки");
-        </script>
-
-    HELLO WORLD
+    <p><a href="files/3.7z" download>Скачать файл</a>
   </body>
 </html>
