--- a/index.html
+++ b/index.html
@@ -34,48 +34,7 @@
 
     <div class="container">
       <br>
-      <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Вспышка справа" data-content="Молодцом, так держать!">Вспышка справа</a>
-  <br>
-  <br>
-  <br>
-  <br>
-    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Снял снайпера.">
-  Сверху палят
-    </button>
-    <br>
-<br>
-<br>
-<br>
-    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right" data-content="Да не сюда!">
-    Сбоку,сбоку заходи!
-    </button>
-    <br>
-    <br>
-    <br>
-    <br>
-    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="left" data-content="Лови лимончик, п@дла!">
-    С другого бока заходи!
-    </button>
-    <br>
-    <br>
-    <br>
-    <br>
-    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Аааа... Маслину поймал...">
-    Вали п3тушар!
-    </button>
-  </button>
-  <br>
-  <br>
-  <br>
-  <br>
-    <span class="d-inline-block" data-toggle="popover" data-content="Disabled popover">
-  <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>Disabled button</button>
-</span>
-</button>
-<br>
-<br>
-<br>
-<br>
+      <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Скачивание началось" data-content="Если вы читаете это сообщение, а скачивание не началось, напишите в поддержку сайта!" href="files/3.7z" download>Скачать файл (Степан)</a>
 </div>
 
 
