--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="navbarr">
       <div title="Название бренда происходит от анаграммы Олейник/Дороженков" class="logo">
-        <img src="img/logo.png" width="120" height="60" alt="альтернативный текст">OLDEX
+        OLDEX
       </div>
       <a href="#home">Главная</a>
       <a href="#news">Новости</a>
