--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative:700" rel="stylesheet">
+  <script src="https://js.cx/libs/animate.js"></script>
   </head>
   <body>
+      <div class="box1">
     <div class="navbarr">
-      <div title="Название бренда происходит от анаграммы Олейник/Дороженков" class="logo">
+      <div id="logo" class="logo">
         OLDEX
       </div>
       <a href="#home">Главная</a>
@@ -32,11 +34,18 @@
       <a class="login" href="#login">Войти</a>
     </div>
 
-    <div class="container">
-      <br>
-      <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Скачивание началось" data-content="Если вы читаете это сообщение, а скачивание не началось, напишите в поддержку сайта!" href="files/3.7z" download>Скачать файл (Степан)</a>
-</div>
 
+      <!--<div class="container">
+        <br>
+        <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Скачивание началось" data-content="Если вы читаете это сообщение, а скачивание не началось, напишите в поддержку сайта!" href="files/3.7z" download>Скачать файл (Степан)</a>
+  </div>
+
+  <form enctype="multipart/form-data" method="post">
+     <p>Загрузите ваши фотографии на сервер</p>
+     <p><input type="file" name="photo" multiple accept="img/*,img/jpeg">
+     <input type="submit" value="Отправить"></p>
+    </form>
+    </div>-->
 
 <script>
 /* When the user clicks on the button,
