--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
       <a class="login" href="#login">Войти</a>
     </div>
 
+    <div class="welcometext">
+      <h3> Добро пожаловать на сайт OLDEX. Здесь вы можете найти нужную вам информацию, полезные ссылки, программы. Сайт создан студентами
+    СКС-15 ДонГТУ - Дороженковым Павлом и Олейником Даниилом</h3>
+    </div>
 
-      <!--<div class="container">
+</div>
+
+  <div class="box2">
+      <div class="container">
         <br>
         <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Скачивание началось" data-content="Если вы читаете это сообщение, а скачивание не началось, напишите в поддержку сайта!" href="files/3.7z" download>Скачать файл (Степан)</a>
   </div>
@@ -45,7 +52,7 @@
      <p><input type="file" name="photo" multiple accept="img/*,img/jpeg">
      <input type="submit" value="Отправить"></p>
     </form>
-    </div>-->
+    </div>
 
 <script>
 /* When the user clicks on the button,
