--- a/index.html
+++ b/index.html
@@ -51,22 +51,18 @@
                     <tr><td>ГОСТ 19.106-78 Единая система программной документации. Требования к программным документам, выполненным печатным способом</td><td>.pdf</td><td>1456 кб</td><td><button>Скачать</button></td></tr>
                     <tr><td>ГОСТ 19.104-78 Единая система программной документации. Основные надписи</td><td>.docx</td><td>2500 кб</td><td><button>Скачать</button></td></tr>
                     <tr><td style="background-color:#1abc9c;color:white;">ГОСТ 2.301-68 Единая система конструкторской документации. Форматы</td><td>.pdf</td><td>8146 кб</td><td><button>Скачать</button></td></tr>
+                    <tr><td>Теги</td><td></td><td></td><td></td></tr>
+                    <tr><td><div class="tags">
+                      <a href="#">Дороженков Павел Александрович</a>
+                      <a href="#">СКС</a>
+                      <a href="#">2019</a></div></td><td></td><td></td><td></td></tr>
+                    <tr><td><button>Изменить теги</button></td><td><button>Отправить</button></td><td><button>Архивировать</button></td><td><button>Удалить файл</button></td></tr>
+
             </table>
           </li>
          </ul>
       </div>
-      <li id="t2menu">
-        <table>
-                <tr><th>ГОСТ 2.301-68 Единая система конструкторской документации. Форматы</th><th>.pdf</th><th>8146 кб</th><th><button>Скачать</button></th></tr>
-                <tr><td>Теги</td><td></td><td></td><td></td></tr>
-                <tr><td><div class="tags">
-                  <a href="#">Гонтовой Сергей Викторович</a>
-                  <a href="#">СКС</a>
-                  <a href="#">2019</a></div></td><td></td><td></td><td></td></tr>
-                <tr><td><button>Изменить теги</button></td><td><button>Отправить</button></td><td><button>Архивировать</button></td><td><button>Удалить файл</button></td></tr>
 
-        </table>
-      </li>
               <!-- popup form #1 -->
               <a href="#x" class="overlay" id="login_form"></a>
               <div class="popup">
